--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+	<servlet>
+		<servlet-name>books</servlet-name>
+		<servlet-class>com.books.ServletController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>books</servlet-name>
+		<url-pattern>/Books/*</url-pattern>
+	</servlet-mapping>
+  
+  
 </web-app>
